# gather-injection

./: LICENSE.txt  README.md  pyproject.toml  ruff.toml  wait_for_game_object.js
.devcontainer/: devcontainer.json
app/: __about__.py  __init__.py  chromium_debug_protocol_executor.py  config.py  exceptions.py  gather_controller.py  gather_launcher.py  main.py  script_executor.py  utils.py  window_manager.py
sample_scripts/: add_teleport_button.js
